# DSPkit

./: .gitignore  404.html  GUI_NEW_FEATURES.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/emd/: index.html
api/fdd/: index.html
api/filters/: index.html
api/indicators/: index.html
api/instantaneous/: index.html
api/multisensor/: index.html
api/peaks/: index.html
api/plots/: index.html
api/spectral/: index.html
api/statistics/: index.html
api/timefreq/: index.html
api/utils/: index.html
conventions/: index.html
docs/: conventions.md  examples.md  gen_images.py  index.md  installation.md  quickstart.md
docs/api/: emd.md  fdd.md  filters.md  indicators.md  instantaneous.md  multisensor.md  peaks.md  plots.md  spectral.md  statistics.md  timefreq.md  utils.md
dspkit/: __init__.py  _testing.py  emd.py  fdd.py  filters.py  indicators.py  instantaneous.py  multisensor.py  peaks.py  plots.py  spectral.py  statistics.py  timefreq.py  utils.py
examples/: example_emd.py  example_fdd.py  example_filters_utils.py  example_instantaneous.py  example_multisensor_stats.py  example_peaks_indicators.py  example_spectral.py  example_timefreq.py  index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_emd.py  test_fdd.py  test_filters.py  test_indicators.py  test_instantaneous.py  test_multisensor.py  test_peaks.py  test_spectral.py  test_statistics.py  test_timefreq.py  test_utils.py
