[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dspkit"
version = "0.1.0"
description = "DSP toolkit for structural health monitoring"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["dsp", "signal-processing", "structural-health-monitoring", "vibration", "fft", "wavelet", "emd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/LuigiCaglio/DSPkit"
Documentation = "https://LuigiCaglio.github.io/DSPkit"
Repository = "https://github.com/LuigiCaglio/DSPkit"
Issues = "https://github.com/LuigiCaglio/DSPkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dspkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
